fl studio css font-face test

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'Cuprum';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/cuprum/v25/dg45_pLmvrkcOkBnKsOzXyGWTBcmg-X6VjbYJwQj.woff2) format('woff2');
+  unicode-range: U+0460-052F, U+1C80-1C8A, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+}
+
 main {
   margin: 0px auto;
   max-width: 70%;
@@ -46,7 +54,7 @@ a {
   visibility: hidden;
   color: #000;
   text-align: center;
-  
+
   /* Position the tooltip */
   position: absolute;
   top: 100%;
